tweaked a little, not able to get links correct color on hover, opacity wrong, couldn't align navbar properly, needs spacing bw icons and letters

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,11 +1,16 @@
 .banner {
   background-size: cover !important;
-  background-position: center;
+  background-position: 100%;
   padding: 200px 0;
+  margin: 0px;
 }
 
 .banner h1 {
+  margin: 0;
   color: white;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
+  font-size: 42px;
+  font-weight: bold;
 }
 
 .banner p {
